# CAMELS

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  logging.ini  logging.yaml  pyproject.toml  requirements.txt
camels/: __init__.py  settings.py
camels/audit/: __init__.py  storage.py
camels/core/: __init__.py  registry.py  runner.py  stage.py  utils.py
camels/dashboard/: __init__.py
camels/export/: __init__.py  generators.py
camels/ingestion/: __init__.py  catalog.py  download.py  pipeline.py  storage.py
camels/ingestion/parsers/: __init__.py  base.py  csv_loader.py  pdf_loader.py  xlsx_loader.py
camels/normalization/: __init__.py  banks.py  indicators.py  inputs.py  pipeline.py  schema.py  storage.py  transformers.py
camels/scoring/: __init__.py  config.py  engine.py  models.py  pipeline.py  repository.py  storage.py
config/: camels_thresholds.yaml  sources.yaml
data/reference/: banks.csv
scripts/: __init__.py  camels.py  demo_seed.py
tests/: conftest.py  test_core_registry.py  test_dashboard_stage.py  test_ingestion_pipeline.py  test_normalization.py  test_scoring_engine.py
yaml/: __init__.py
