[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camels"
version = "0.1.0"
description = "Command-line toolkit for the CAMELS analytics pipeline."
authors = [{ name = "CAMELS Team" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "openpyxl>=3.1.2",
    "pypdf>=3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.0",
    "ruff>=0.3",
]

[project.scripts]
camels = "scripts.camels:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["camels*"]
