[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camels"
version = "0.1.0"
description = "Command-line toolkit for the CAMELS analytics pipeline."
authors = [{ name = "CAMELS Team" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "black>=23.0",
    "ruff>=0.3",
]

[project.scripts]
camels = "scripts.camels:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["camels*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["camels", "scripts", "tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
